kubernetes/main/apps/whoami/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    pod-security.kubernetes.io/audit: privileged 
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    goldilocks.fairwinds.com/enabled: "true"
