kubernetes/main/apps/whoami/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app whoami
  namespace: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          resources: {}
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
